# gsus

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  install.sh
packaging/: gsus.service  org.gsus.conf  org.gsus.service
src/: gsusd.cpp  main.cpp
src/cli/: commands.hpp  gsus.cpp
src/daemon/: commands.hpp  gsusd.cpp  state.hpp
